third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/eq/unknown_struct_attribute.rs
#[derive(derive_more::Eq)]
#[eq(unknown)]
struct Foo(i32);

impl PartialEq for Foo {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

fn main() {}
